# ISPC-Newton-Fractal

./: .gitignore  CMakeLists.txt  README.md
include/: config.hpp  host_render.hpp  image_png.hpp  image_ppm.hpp  roots.hpp
ispc/: fractal.ispc  helper.ispc
src/: config.cpp  host_render.cpp  main.cpp
tests/: test_config.cpp  test_png.cpp  test_ppm.cpp  test_roots.cpp
